# MingJian

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT_GUIDE.md  Dockerfile  EDITION.md  LICENSE  MCP_TOOLS.md  PLAN.md  PROMOTION.md  README.hi.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  SOCIAL_MEDIA.md  TECHNICAL_DEBT_BACKLOG.md  compose.yml  docker-compose.yml  plana.md  pyproject.toml  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: custom_sources.yaml
docker/: init.sql
docs/: agent_startup_playbook.md  planagent_full_report.md  release_impact_test_report.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend-new/: package-lock.json  package.json
frontend-v2/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/.next/: trace  (+1 more)
migrations/: env.py
output/: .gitignore
scripts/: configure-minimax-demo-agents.sh  start-local-stack.sh  start-workers.sh
tests/: conftest.py  stress_test.py  test_agents_api.py  test_analysis_api.py  test_analysis_x_search.py  test_api_pagination_bounds.py  test_community_access.py  test_community_feature_boundaries.py  test_export_api.py  test_new_features.py  test_phase1_api.py  test_phase2_simulation_api.py  test_phase3_military_api.py  test_phase4_workbench_and_debates.py  test_simulation_action_selection.py  test_source_mcp.py  test_source_registry.py  test_strategic_assistant.py  (+2 more)
(+379 files in other folders)
