[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planagent"
version = "0.1.0"
description = "Evidence-driven scenario simulation platform bootstrap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "greenlet>=3.1,<4.0",
  "aiosqlite>=0.21,<1.0",
  "alembic>=1.16,<2.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "httpx>=0.28,<1.0",
  "openai>=2.28,<3.0",
  "redis>=6.2,<7.0",
  "psycopg[binary]>=3.2,<4.0",
  "pgvector>=0.3,<1.0",
  "minio>=7.2,<8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
  "ruff>=0.12,<1.0",
]

[project.scripts]
planagent-api = "planagent.main:run"
planagent-worker = "planagent.worker_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
